--- a/src/app/index.css
+++ b/src/app/index.css
@@ -1,1 +1,13 @@
 @import "tailwindcss";
+*{
+box-sizing: border-box;
+margin: 0;
+padding: 0;    
+/* font-family: "Jost"; */
+font-optical-sizing: auto;
+}
+@import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap');
+
+body{
+    font-family: "Jost", sans-serif;
+}
